--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    id="WebApp_ID" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
 
-    <filter>
-        <filter-name>MultipartFilter</filter-name>
-        <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
-    </filter>
-    <!--<filter>-->
-        <!--<filter-name>HiddenHttpMethodFilter</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-        <!--<filter-name>HiddenHttpMethodFilter</filter-name>-->
-        <!--<servlet-name>appServlet</servlet-name>-->
-    <!--</filter-mapping>-->
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>MultipartFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+	<filter>
+		<filter-name>MultipartFilter</filter-name>
+		<filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+	</filter>
+	<!--<filter> -->
+	<!--<filter-name>HiddenHttpMethodFilter</filter-name> -->
+	<!--<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class> -->
+	<!--</filter> -->
+	<!--<filter-mapping> -->
+	<!--<filter-name>HiddenHttpMethodFilter</filter-name> -->
+	<!--<servlet-name>appServlet</servlet-name> -->
+	<!--</filter-mapping> -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MultipartFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<listener>
-              <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 	<listener>
@@ -41,11 +40,11 @@
 
 	<!-- Log4j configuration -->
 	<context-param>
-	    <param-name>log4jConfigLocation</param-name>
-	    <param-value>classpath:/log4j.properties</param-value>
-	</context-param>    
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:/log4j.properties</param-value>
+	</context-param>
 	<listener>
-	    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 
 	<servlet-mapping>
@@ -64,12 +63,14 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-    <!-- Configuration files of the Spring modules -->
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>
-            classpath:/config/mongo-config.xml
+	<!-- Configuration files of the Spring modules -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
             classpath:/config/security-config.xml
         </param-value>
-    </context-param>
+
+		<!-- <param-value> classpath:/config/mongo-config.xml classpath:/config/security-config.xml 
+			</param-value> -->
+	</context-param>
 </web-app>
