--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,8 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 
-    
-	<filter>
-		<filter-name>MultipartFilter</filter-name>
-		<filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
-	</filter>
+
+
 	<!--<filter> -->
 	<!--<filter-name>HiddenHttpMethodFilter</filter-name> -->
 	<!--<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class> -->
@@ -19,12 +16,17 @@
 	<!--<servlet-name>appServlet</servlet-name> -->
 	<!--</filter-mapping> -->
 	<filter>
+		<filter-name>MultipartFilter</filter-name>
+		<filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+	</filter>
+	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
+
 	<filter-mapping>
 		<filter-name>MultipartFilter</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/secure/*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
